# morphemic_integration

docker_image/: Dockerfile  run_gluonts.sh  run_prophet.sh
forecasting/: .~lock.demo.csv#  demo.csv  main.py  prob_file.npy  prophet.py  prophet_threading.py  prophetv2.py  prophetv3.py
forecasting/morphemic/: .gitlab-ci.yml  labels.morphemic
forecasting/morphemic/scheduling-abstraction-layer/: settings.gradle
forecasting_gluonts/: prob_file.npy
forecasting_gluonts/forecasting/: gluontsv2.py
forecasting_gluonts/gluonts/: gluonts.py
forecasting_gluonts/messaging/: MorphemicConnection.py  MorphemicListener.py
forecasting_gluonts/models/: gluonts_avgResponseTime.pkl
forecasting_gluonts/morphemic/: configuration.py  dataset.py  scheduler.py
forecasting_gluonts/morphemic/morphemic-persistent-storage/: README.md
forecasting_prophet/: dataset_maker.py  default_application.csv  demo.csv  env  gluonts.py  main.py  prob_file.npy  prophetv2.py  variables.env
forecasting_prophet/database/: entrypoint.sh  influxdb.conf
forecasting_prophet/database/inputapi/: setup.cfg
forecasting_prophet/database/inputapi/src/: activemqlistermanager.py  app.py  listener.py
forecasting_prophet/forecasting/: prophetv2.py
forecasting_prophet/morphemic/: __init__.py
forecasting_prophet/morphemic/dataset/: __init__.py
forecasting_prophet/morphemic/morphemic-persistent-storage/: docker-compose.yaml  run_app.sh  variables.env
forecasting_prophet/prophet/: prophet.py
morphemic_integration/forecasting_gluonts/: default_application.csv  main.py
(+165 files in other folders)
